[package]
name = "staking-contract"
version = "0.0.1"
authors = [ "Kevin Lallement", "Middle Staking"]
edition = "2018"
publish = false

[lib]
path = "src/staking-contract.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.39.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.0"
